--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,14 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+header {
+    background:white;
+    padding:20px;
+}
+
+header > h1 {
+    color: black;
+    text-align: center;
+    font-family: Asap,sans-serif;
+}
