--- a/styles.css
+++ b/styles.css
@@ -20,3 +20,14 @@ header > h1 {
     font-family: Asap,sans-serif;
 }
 
+.score-board {
+    margin: 20px auto;
+    border: 3px solid white;
+    border-radius: 5px;
+    text-align: center;
+    width: 200px;
+    color: white;
+    font-size:45px;
+    padding: 15px 20px;
+    font-family: Asap,sans-serif;
+}
