--- a/styles.css
+++ b/styles.css
@@ -31,3 +31,12 @@ header > h1 {
     padding: 15px 20px;
     font-family: Asap,sans-serif;
 }
+
+.badge {
+    background: red;
+    color: white;
+    font-size: 14px;
+    padding: 2px 10px;
+    font-family: Asap,sans-serif;
+}
+
