--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ header > h1 {
     font-size:45px;
     padding: 15px 20px;
     font-family: Asap,sans-serif;
+    position: relative;
 }
 
 .badge {
@@ -40,3 +41,14 @@ header > h1 {
     font-family: Asap,sans-serif;
 }
 
+#user-label {
+    position: absolute;
+    top: 30px;
+    left: -25px;
+}
+
+#comp-label {
+    position:absolute;
+    top: 30px;
+    right: -30px;
+}
