--- a/styles.css
+++ b/styles.css
@@ -52,3 +52,10 @@ header > h1 {
     top: 30px;
     right: -30px;
 }
+
+.result > p {
+    text-align: center;
+    color: white;
+    font-size: 40px;
+    font-family: Asap, sans-serif;
+}
