--- a/styles.css
+++ b/styles.css
@@ -59,3 +59,21 @@ header > h1 {
     font-size: 40px;
     font-family: Asap, sans-serif;
 }
+
+.choices {
+    margin: 50px 0;
+    text-align: center;
+}
+
+.choice {
+    border: 4px solid white;
+    border-radius: 50%;
+    margin: 0 20px;
+    padding: 10px;
+    display: inline-block;
+}
+
+.choice:hover {
+    cursor:pointer;
+    background: rgb(255, 189, 200);
+}
