--- a/styles.css
+++ b/styles.css
@@ -77,3 +77,11 @@ header > h1 {
     cursor:pointer;
     background: rgb(255, 189, 200);
 }
+
+#action-message {
+    color:white;
+    text-align: center;
+    font-family: Asap, sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+}
