--- a/styles.css
+++ b/styles.css
@@ -85,3 +85,18 @@ header > h1 {
     font-weight: bold;
     font-size: 20px;
 }
+
+.green-glow {
+    border: 4px solid rgb(164, 249, 164);
+    box-shadow: 0 0 10px rgb(18, 205, 18);
+}
+
+.red-glow {
+    border: 4px solid rgb(241, 134, 134);
+    box-shadow: 0 0 10px rgb(247, 25, 25);
+}
+
+.gray-glow {
+    border: 4px solid rgb(222, 222, 222);
+    box-shadow: 0 0 10px rgb(85, 79, 79);
+}
