--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,30 @@ header > h1 {
     font-size: 20px;
 }
 
+#container {
+    text-align: center;
+    padding-top: 25px;
+}
+
+#resetBtn {
+    font-family: Asap, sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+    width:150px;
+    height:50px;
+    border-radius: 30%;
+    border-color: aliceblue;
+    background-color: whitesmoke;
+    transition: color .5s, background-color .5s, border-radius 1s, box-shadow 1.5s, transform 2s
+}
+
+#resetBtn:hover {
+    color: white;
+    background-color: #24272E;
+    border-radius: 50%;
+    box-shadow: 5px 5px 25px blue, 10px 10px 15px whitesmoke, 15px 15px 15px pink;
+}
+
 .green-glow {
     border: 4px solid rgb(164, 249, 164);
     box-shadow: 0 0 10px rgb(18, 205, 18);
